package standard

/**
Observer: 抽象观察者
*/
type Observer interface {
	Response()
}
